# rust-ember-spa

./: Cargo.toml  data.json  readme.md
src/: game.rs  main.rs
src/db/: redis.rs
src/responder_wrappers/: cors.rs  mod.rs
src/routes/: dev.rs  mod.rs
ui/todo-rust/: README.md  package-lock.json  package.json
ui/todo-rust/app/: index.html  router.js
ui/todo-rust/app/models/: game.js
ui/todo-rust/app/routes/: index.js
ui/todo-rust/app/templates/: 404.hbs  application.hbs  index.hbs  infos.hbs
ui/todo-rust/app/templates/components/: games-list.hbs
ui/todo-rust/config/: environment.js
ui/todo-rust/tests/: index.html
ui/todo-rust/tests/integration/components/: games-list-test.js
ui/todo-rust/tests/unit/routes/: infos-test.js
